deployment/app.yaml
# Kubernetes deployment file for the query-processor web service
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-processor
spec:
  replicas: 2  # Only deploy one instance of the web service
  selector:
    matchLabels:
      app: query-processor
  template:
    metadata:
      labels:
        app: query-processor
    spec:
      imagePullSecrets:
        - name: acr-secret
      containers:
        - name: query-processor
          image: twoshot.azurecr.io/query-processor:b39b50d33085459b78b1ddda284602f09d518197  # Use the latest version of the Docker image
          ports:
            - containerPort: 3000  # Expose port 3000 on the container

          # scan websocket endpoint on port 3000 to check if the service is up - ignore 404 errors
          readinessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: query-processor
spec:
  type: NodePort  # Use a NodePort service type to expose the web service on the cluster's nodes
  selector:
    app: query-processor
  ports:
    - protocol: TCP
      port: 3000  # Expose port 3000 on the service
      targetPort: 3000  # Target the container's port 3000 for incoming traffic
