deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: studio-project-ingress
  annotations:
    nginx.org/websocket-services: studio-project-service
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/secure-backends: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"  # 1 hour
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"  # 1 hour
    nginx.ingress.kubernetes.io/keepalive-timeout: "3600"   # 1 hour
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - studio.api.twoshot.app
      secretName: tls-studio
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: studio-project-service
                port:
                  number: 3000
      host: studio.api.twoshot.app
